<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/action_main"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/app_name"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/action_maps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_maps"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/action_censor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sensor"
        android:icon="@android:drawable/ic_menu_preferences"/>
    <item
        android:id="@+id/action_graph"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/graph"
        android:icon="@android:drawable/ic_menu_preferences"/>
    
</menu>
